--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@
     position:relative;
 }
 /* text css above gieyan image*/
-.hero_title {
+.gieyan_title {
     font-size: 4.5rem;
 }
-.hero_desc {
+.gieyan_desc {
     font-size: 2rem;
 }
-.hero-text {
+.gieyan-text {
     text-align: center;
     position: absolute;
     top: 50%;
