--- a/style.css
+++ b/style.css
@@ -25,3 +25,8 @@
 .imageAboutPage {
     width: 100%;
 }
+
+/* display background color black on navbar scroll */
+.navbarScroll.navbarDark {
+    background-color: black;
+}
