--- a/style.css
+++ b/style.css
@@ -30,3 +30,19 @@
 .navbarScroll.navbarDark {
     background-color: black;
 }
+/* social media icons styling */
+.social-icons {
+    font-size: 36px;
+    cursor: pointer;
+}
+.fa-facebook:hover,.fa-gmail:hover{
+    color: #008000;
+}
+.fab {
+    color: #000000;
+}
+/* footer styling */
+#footer {
+    background-color: #808080;
+    text-align: center;
+}
